# ray-nbow

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  random_testing.cpp  rtrandom.cpp  rtrandom.h  save-scene.cpp  timer.cpp  timer.h  trace-scene.cpp
blender/: random_mats.py  test  test1
gl-depth/: .gitignore  distribution_functions.py  image_distribution.py  main.py  rendering.py  requirements.txt  scene_io.py  test_epsilon.py
gl-depth/scenes/: basic.json
gl-depth/shaders/: pt-frag.glsl  pt-vert.glsl
hueristic/: heuristic.py  requirements.txt
mat-tracer/: CMakeLists.txt  mat-tracer.cpp
python/: .gitignore  classic.py  colorization.py  data-anno.json  datasets.py  dl.py  download.py  falling_paint.py  gan.py  hist.py  models.py  requirements.txt
python/data_scripts/: clean_met.py  download.py  metdata.py
ray-tracer/: CMakeLists.txt  basic-math.cpp  basic-math.hpp  mat4.cpp  mat4.hpp  ray-tracer.cpp  ray-tracer.hpp  ray-tracing-scene.cpp  ray-tracing-scene.hpp  ray.cpp  ray.hpp  shape.cpp  shape.hpp  transform.cpp  transform.hpp  utils.cpp  utils.hpp  vec3.cpp  vec3.hpp
resources/scenes/: basic.scene  bunny.scene
test/: CMakeLists.txt  test-ray-tracer.cpp
test/test_data/scenes/: basic.scene
