add_library(
    ray-tracer 
# headers
    basic-math.hpp 
    mat4.hpp 
    ray-tracer.hpp 
    ray-tracing-scene.hpp 
    ray.hpp 
    shape.hpp 
    transform.hpp 
    vec3.hpp 
# sources 
    basic-math.cpp 
    mat4.cpp 
    ray-tracing-scene.cpp 
    ray.cpp 
    shape.cpp 
    transform.cpp 
    vec3.cpp 

    )